; ModuleID = '/home/carl/AnghaBench/i3/libi3/extr_font.c_draw_text_xcb.c'
source_filename = "/home/carl/AnghaBench/i3/libi3/extr_font.c_draw_text_xcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@savedFont = common dso_local global %struct.TYPE_8__* null, align 8
@conn = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32, i32, i32, i32)* @draw_text_xcb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @draw_text_xcb(i32* %0, i64 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %17 = load i32, i32* %12, align 4
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** @savedFont, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %17, %24
  store i32 %25, i32* %13, align 4
  store i32 0, i32* %14, align 4
  br label %26

26:                                               ; preds = %57, %6
  %27 = load i64, i64* %8, align 8
  %28 = icmp ugt i64 %27, 255
  br i1 %28, label %29, label %30

29:                                               ; preds = %26
  br label %32

30:                                               ; preds = %26
  %31 = load i64, i64* %8, align 8
  br label %32

32:                                               ; preds = %30, %29
  %33 = phi i64 [ 255, %29 ], [ %31, %30 ]
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %15, align 4
  %35 = load i32*, i32** %7, align 8
  %36 = load i32, i32* %14, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  store i32* %38, i32** %16, align 8
  %39 = load i32, i32* @conn, align 4
  %40 = load i32, i32* %15, align 4
  %41 = load i32, i32* %9, align 4
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %13, align 4
  %45 = load i32*, i32** %16, align 8
  %46 = call i32 @xcb_image_text_16(i32 %39, i32 %40, i32 %41, i32 %42, i32 %43, i32 %44, i32* %45)
  %47 = load i32, i32* %15, align 4
  %48 = load i32, i32* %14, align 4
  %49 = add nsw i32 %48, %47
  store i32 %49, i32* %14, align 4
  %50 = load i32, i32* %15, align 4
  %51 = sext i32 %50 to i64
  %52 = load i64, i64* %8, align 8
  %53 = sub i64 %52, %51
  store i64 %53, i64* %8, align 8
  %54 = load i64, i64* %8, align 8
  %55 = icmp eq i64 %54, 0
  br i1 %55, label %56, label %57

56:                                               ; preds = %32
  br label %65

57:                                               ; preds = %32
  %58 = load i32*, i32** %16, align 8
  %59 = load i32, i32* %15, align 4
  %60 = call i64 @predict_text_width_xcb(i32* %58, i32 %59)
  %61 = load i32, i32* %11, align 4
  %62 = sext i32 %61 to i64
  %63 = add nsw i64 %62, %60
  %64 = trunc i64 %63 to i32
  store i32 %64, i32* %11, align 4
  br label %26

65:                                               ; preds = %56
  ret void
}

declare dso_local i32 @xcb_image_text_16(i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i64 @predict_text_width_xcb(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
